[package]
name = "netblocks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="*", features=["full"] }
tokio-util = { version="*", features=["full"] }
tokio-stream = "*"
futures = "*"
bytes = "*"
async-stream = "*"
futures-util = "*"
tokio-core  = { version="*"  }
futures-core = "*"